# anomalib

./: .gitignore  002_get_started_with_v1.ipynb  CHANGELOG.md  README.md  config.yaml  explore.ipynb  pyproject.toml  setup.py  test_specific_example.py  third-party-programs.txt  vis.ipynb
.github/: assistant.py
.github/actions/code-quality/pre-commit/: action.yaml
.github/actions/docker-build/: action.yml
.github/actions/linting/pre-commit/: action.yaml
.github/actions/linting/ruff/: action.yaml
.github/actions/ollama-preflight/: action.yaml
.github/actions/pytest/: action.yaml
.github/actions/security/bandit/: action.yaml
.github/actions/security/clamav/: action.yaml
.github/actions/security/semgrep/: action.yaml
.github/actions/security/trivy/: action.yaml
.github/actions/static-analysis/semgrep/: action.yaml
.github/workflows/: _reusable-artifact-builder.yaml  _reusable-code-quality.yaml  _reusable-docker-build.yaml  _reusable-pr-title-check.yaml  _reusable-security-scan.yaml  _reusable-test-suite.yaml  _reusable-version-bump.yaml  _reusable-version-check.yaml  anomalib-studio.yaml  auto-approve.yml  bandit.yaml  clamav.yaml  codeql.yml  copilot-setup-steps.yml  daily-docker-publish.yml  dco_merge_group.yml  issue-management.yaml  manual-hooks.yaml  manual-security-checks.yaml  npm-audit-fix.yml  opencode-agents-md-sync.yml  opencode-docs-sync.yml  opencode-issue-triage.yml  pr-checks.yaml  pr.yaml  pre_merge.yml  promote-rc-app-release.yml  publish-rc-app.yml  release-checks.yaml  release-lib.yaml  renovate-config-validator.yml  renovate.yml  scorecards.yml  secret-scan.yml  security-checks.yaml  semgrep.yaml  tauri-build.yaml  test-pr.yaml  trivy.yaml
application/backend/: pyproject.toml
application/binary/tauri/: package-lock.json  package.json
application/binary/tauri/src-tauri/: Cargo.toml
application/docker/: Dockerfile
application/ui/: package-lock.json  package.json
docs/source/: conf.py
examples/cli/00_installation/: uv_install.sh
examples/configs/model/: anomalyvfm.yaml  cfm.yaml  glass.yaml  inp_former.yaml
examples/notebooks/: README.md
examples/notebooks/01_getting_started/: README.md  getting_started.ipynb
examples/notebooks/02_data/: README.md
examples/notebooks/02_data/datamodules/: folder.ipynb  tabular.ipynb
examples/notebooks/03_models/: README.md  fastflow.ipynb
examples/notebooks/04_deployment/: README.md  openvino_quantization.ipynb
examples/notebooks/04_loggers/: README.md
examples/notebooks/04_metrics/: README.md
examples/notebooks/05_loggers/: README.md
examples/notebooks/05_metrics/: README.md
examples/notebooks/06_metrics/: README.md
examples/notebooks/06_visualization/: README.md
examples/notebooks/07_deployment/: README.md  openvino_quantization.ipynb
examples/notebooks/07_visualization/: README.md  visualize_image.ipynb
examples/notebooks/08_use_cases/501_dobot/: README.md
papers/v1x/: paper.bib  paper.md
runs2/: mvtec3d.pt  visa.pt
runs2/mvtec_ad/cfa/: cfa_gpu.csv
runs2/mvtec_ad/cflow/: cflow_gpu.csv
runs2/mvtec_ad/csflow/: csflow_gpu.csv
runs2/mvtec_ad/dfkde/: dfkde_gpu.csv
runs2/mvtec_ad/dfm/: dfm_gpu.csv
runs2/mvtec_ad/draem/: draem_gpu.csv
runs2/mvtec_ad/fastflow/: fastflow_gpu.csv
runs2/mvtec_ad/ganomaly/: ganomaly_gpu.csv
runs2/mvtec_ad/padim/: padim_gpu.csv
runs2/mvtec_ad/patchcore/: patchcore_gpu.csv
runs2/mvtec_ad/reverse_distillation/: reverse_distillation_gpu.csv
runs2/mvtec_ad/stfpm/: stfpm_gpu.csv
src/anomalib/: MANIFEST.in  __about__.py  __init__.py  __main__.py  __setup__.py
src/anomalib/callbacks/: __init__.py  graph.py  thresholding.py  visualizer.py
src/anomalib/callbacks/nncf/: callback.py  utils.py
src/anomalib/callbacks/normalization/: __init__.py
src/anomalib/cli/: __init__.py  cli.py
src/anomalib/cli/utils/: installation.py
src/anomalib/data/: __init__.py  errors.py
src/anomalib/data/base/: __init__.py  datamodule.py  dataset.py  depth.py  video.py
src/anomalib/data/dataclasses/: __init__.py  base.py  models.py
src/anomalib/data/datamodules/: __init__.py
src/anomalib/data/datasets/: __init__.py
src/anomalib/data/depth/: folder_3d.py  mvtec_3d.py
src/anomalib/data/image/: btech.py  folder.py  kolektor.py  mvtec.py  visa.py
src/anomalib/data/utils/: __init__.py  split.py  synthetic.py  video.py
src/anomalib/data/video/: avenue.py  shanghaitech.py  ucsd_ped.py
src/anomalib/dataclasses/: numpy.py  torch.py
src/anomalib/dataclasses/validate/: __init__.py
src/anomalib/deploy/: __init__.py
src/anomalib/engine/: engine.py
src/anomalib/loggers/: __init__.py  base.py  comet.py  mlflow.py  tensorboard.py  wandb.py
src/anomalib/metrics/: __init__.py  pro.py
src/anomalib/metrics/threshold/: base.py
src/anomalib/models/: __init__.py
src/anomalib/models/cfa/: config.yaml
src/anomalib/models/cflow/: config.yaml
src/anomalib/models/components/: __init__.py
src/anomalib/models/csflow/: config.yaml
src/anomalib/models/dfkde/: config.yaml
src/anomalib/models/dfm/: config.yaml
src/anomalib/models/draem/: config.yaml
src/anomalib/models/fastflow/: config.yaml
src/anomalib/models/ganomaly/: config.yaml
src/anomalib/models/image/: __init__.py
src/anomalib/models/padim/: config.yaml
src/anomalib/models/patchcore/: config.yaml
src/anomalib/post_processing/: post_processor.py
src/anomalib/utils/: imports.py  post_processing.py  warning.py
tests/helpers/: data.py
tests/integration/cli/: test_cli.py
tests/integration/model/: test_models.py
tests/integration/tools/: test_gradio_entrypoint.py  test_lightning_entrypoint.py  test_openvino_entrypoint.py  test_torch_entrypoint.py
tests/unit/cli/: test_help_formatter.py  test_installation.py
tests/unit/deploy/: test_inferencer.py
tests/unit/engine/: test_engine.py  test_setup_transform.py
tests/unit/metrics/: test_adaptive_threshold.py  test_binning.py  test_pro.py
tests/unit/utils/: test_visualizer.py
tools/benchmarking/: benchmark_params.yaml
tools/inference/: gradio_inference.py
tools/upgrade/: config.py
(+137 files in other folders)
